@@ -56,7 +56,7 @@ static int pvcreate_restore_params_validate(struct cmd_context *cmd,
 				  pp->restorefile);
 			return 0;
 		}
-		if (!(existing_pv = find_pv_in_vg_by_uuid(vg, pp->idp))) {
+		if (!(existing_pv = find_pv_in_vg_by_uuid(vg, pp->idp)->pv)) {
 			log_error("Can't find uuid %s in backup file %s",
 				  uuid, pp->restorefile);
 			return 0;
