@@ -1,5 +1,7 @@
 Version 2.02.63 - 
 ================================
+  Look up missing PVs by uuid not dev_name in _pvs_single to avoid invalid stat.
+  Make find_pv_in_vg_by_uuid() return same type as related functions.
   Introduce is_missing_pv().
   Fix clvmd Makefile to not overwrite LIBS from template definition.
 
